Add Company and department data retrieve.

--- a/AfpCompanyApi/appsettings.json
+++ b/AfpCompanyApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOPPC\\SQLEXPRESS;Database=AfpCompanyDb;Integrated Security=True; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
