--- a/AfpCompanyApi/appsettings.json
+++ b/AfpCompanyApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOPPC\\SQLEXPRESS;Database=AfpCompanyDb;Integrated Security=True; TrustServerCertificate=true"
+    "Default": "Server=db,1433;Database=AfpCompanyDb;User Id=sa;Password=AwesomePass_1234"
   },
   "Logging": {
     "LogLevel": {
